tests/bad_programs/syntax_errors/if_else_in_funcall_exp.notc
int main() {
    fun(if (true) {} else {});
}
